# LightFEM

./: CMakeLists.txt  LightFEM.pc.in  README.md
include/LightFEM/: Analysis.hpp  Expression.hpp  LightFEM_MPI.hpp  Mesh.hpp
include/LightFEM/Analysis/: TestFunction.hpp  TrialFunction.hpp  VectorTestFunction.hpp  VectorTrialFunction.hpp  operators.hpp  operators.tpp
include/LightFEM/Analysis/Forms/: BilinearForm.hpp  BilinearForm.tpp  DiagonalBilinearForm.hpp  DiagonalBilinearForm.tpp  LinearForm.hpp  LinearForm.tpp  MatrixEntry.hpp  VectorBilinearForm.hpp  VectorBilinearForm.tpp  VectorLinearForm.hpp  VectorLinearForm.tpp
include/LightFEM/Analysis/FunctionSpace/: FunctionSpace.hpp  PnFunctionSpace.hpp  VectorFunctionSpace.hpp
include/LightFEM/Analysis/Measure/: ElementWiseInterpolator.hpp  ElementWiseInterpolator.tpp  GaussLobattoQuadrature.hpp  Measure.hpp  SamplingFunction.hpp
include/LightFEM/Expression/: Traits.hpp
include/LightFEM/Expression/ElementWise/: ElementWiseConst.hpp  ElementWiseDiff.hpp  ElementWiseFunction.hpp  ElementWiseFunction.tpp  ElementWiseFunctionBinaryExpression.hpp  ElementWiseFunctionExpression.hpp  ElementWiseFunctionUnaryExpression.hpp  Traits.hpp  createOperators.py  operators.hpp  operators.tpp
include/LightFEM/Expression/FiniteElementFunction/: CoefBinaryOp.hpp  CoefUnaryOP.hpp  FiniteElementFunction.hpp  FiniteElementFunction.tpp  FiniteElementFunctionBinaryExpression.hpp  FiniteElementFunctionDiffExpression.hpp  FiniteElementFunctionExpression.hpp  FiniteElementFunctionUnaryExpression.hpp  Traits.hpp  createOperators.py  operators.hpp
include/LightFEM/Expression/Function/: Const.hpp  Function.hpp  Function.tpp  FunctionBinaryExpression.hpp  FunctionExpression.hpp  FunctionUnaryExpression.hpp  Traits.hpp  createOperators.py  operators.hpp  operators.tpp
include/LightFEM/Expression/LinAlg/: BinaryExpression.hpp  Cross.hpp  Cross.tpp  ExprType.hpp  Inner.hpp  Inner.tpp  Matrix.hpp  Matrix.tpp  MatrixBinaryExpression.hpp  MatrixBinaryExpression.tpp  MatrixExpression.hpp  MatrixUnaryExpression.hpp  Norm.hpp  Norm.tpp  Outer.hpp  RankFourTensor.hpp  RankFourTensor.tpp  RankFourTensorBinaryExpression.hpp  RankFourTensorExpression.hpp  RankFourTensorUnaryExpression.hpp  RankTwoTensor.hpp  RankTwoTensor.tpp  RankTwoTensorBinaryExpression.hpp  RankTwoTensorBinaryExpression.tpp  RankTwoTensorExpression.hpp  RankTwoTensorUnaryExpression.hpp  RefTypeSelector.hpp  Scalar.hpp  ScalarBinaryExpression.hpp  ScalarExpression.hpp  ScalarUnaryExpression.hpp  UnaryExpression.hpp  Vector.hpp  VectorBinaryExpression.hpp  VectorExpression.hpp  VectorUnaryExpression.hpp  createOperators.py  operators.hpp
include/LightFEM/Mesh/: BoundaryElement.hpp  Element.hpp  GmshMesh.hpp  Mesh.hpp  Node.hpp  RectangularMesh.hpp  RectangularMesh.tpp  operators.hpp  operators.tpp
include/LightFEM/Tools/: FixedSizeLuSolver.hpp  FixedSizeLuSolver.tpp  FixedSizeMatrix.hpp  FixedSizeVector.hpp  Linesearch.hpp  MpiRange.hpp
src/LightFEM/: LightFEM_MPI.cpp
src/LightFEM/Analysis/: TestFunction.cpp  TrialFunction.cpp  VectorTestFunction.cpp  VectorTrialFunction.cpp
src/LightFEM/Analysis/Forms/: BilinearForm.cpp  DiagonalBilinearForm.cpp  LinearForm.cpp  VectorBilinearForm.cpp  VectorLinearForm.cpp
src/LightFEM/Analysis/FunctionSpace/: FunctionSpace.cpp  PnFunctionSpace.cpp  VectorFunctionSpace.cpp
src/LightFEM/Analysis/Measure/: ElementWiseInterpolator.cpp  GaussLobattoQuadrature.cpp  SamplingFunction.cpp
src/LightFEM/Expression/LinAlg/: Matrix.cpp  RankFourTensor.cpp  RankTwoTensor.cpp
src/LightFEM/Mesh/: Element.cpp  GmshMesh.cpp  Mesh.cpp  RectangularMesh.cpp  operators.cpp
src/LightFEM/Tools/: Linesearch.cpp  MpiRange.cpp
test/: CMakeLists.txt  MySparseMatrix.hpp  cblas_wave_equation_mass_lumping.cpp  circle.geo  circle.msh  custom_ABC_mass_lumping.cpp  custom_wave_equation_mass_lumping.cpp  eigen_ABC.cpp  eigen_ABC_mass_lumping.cpp  eigen_marine.cpp  eigen_reverse_time.cpp  eigen_wave_equation.cpp  eigen_wave_equation_mass_lumping.cpp  make_movie.sh  marine.geo  marine.msh
